--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,13 +11,13 @@
 
 # some basic default values...
 
-inventory      = /root/ansible/hosts
+inventory      = /home/centos/ansible/hosts
 #library        = /usr/share/my_modules/
 #module_utils   = /usr/share/my_module_utils/
 #remote_tmp     = ~/.ansible/tmp
 #local_tmp      = ~/.ansible/tmp
 #plugin_filters_cfg = /etc/ansible/plugin_filters.yml
-#forks          = 5
+forks          = 5
 #poll_interval  = 15
 #sudo_user      = root
 #ask_sudo_pass = True
@@ -33,7 +33,7 @@ inventory      = /root/ansible/hosts
 # smart - gather by default, but don't regather if already gathered
 # implicit - gather by default, turn off with gather_facts: False
 # explicit - do not gather by default, must say gather_facts: True
-#gathering = implicit
+gathering = explicit
 
 # This only affects the gathering done by a play's gather_facts directive,
 # by default gathering retrieves all facts subsets
