--- a/Projects/Studentapp/Webapp.yml
+++ b/Projects/Studentapp/Webapp.yml
@@ -13,5 +13,5 @@
       find:
         paths: "{{HTDOCS_DIR}}"
       register: out
-        debug:
-          msg: "{{out}}"
+    - debug:
+        msg: "{{out}}"
