--- a/Projects/Studentapp/Webapp.yml
+++ b/Projects/Studentapp/Webapp.yml
@@ -20,3 +20,9 @@
         path: "{{item.path}}"
         state: absent
       loop: "{{out.files}}" 
+
+    - name: Download Htdocs
+      unarchive:
+        src: https://studentapi-cit.s3-us-west-2.amazonaws.com/studentapp-frontend.tar.gz
+        dest: "{{HTDOCS_DIR}}"
+        remote_src: yes
