Added nginx conf file

--- a/Playbooks/copy-file.yml
+++ b/Playbooks/copy-file.yml
@@ -6,4 +6,12 @@
         name: nginx
         state: installed
 
-    - name:
+    - name: Copy afile
+      copy:
+        src: nginx.conf
+        dest: /etc/nginx/nginx.conf
+
+    - name: Restart nginx
+      service:
+        name: nginx
+        state: restarted
