--- a/Playbooks/Template.yml
+++ b/Playbooks/Template.yml
@@ -14,6 +14,10 @@
         dest: /etc/nginx/nginx.conf
       vars:
         URL: google.com
+        exts: 
+          - student
+          - app1
+          - app2
 
     - name: Restart nginx
       service:
