--- a/Projects/Studentapp/roles/appserver/tasks/main.yml
+++ b/Projects/Studentapp/roles/appserver/tasks/main.yml
@@ -11,7 +11,8 @@
 - name: Print ID
   shell: id
   register: out
-
+  become_user: "{{App_User}}"
+  
 - name: Printing the ID value
   debug:
     msg: "ID = {{out.stdout}}"
