--- a/Projects/Studentapp/roles/appserver/vars/main.yml
+++ b/Projects/Studentapp/roles/appserver/vars/main.yml
@@ -1,3 +1,3 @@
 App_User: student
 App_Home: /home/{{App_User}}
-Tomcat_Url: https://archive.apache.org/dist/tomcat/tomcat-8/v8.5.47/bin/apache-tomcat-8.5.47-fulldocs.tar.gz
+Tomcat_Url: https://archive.apache.org/dist/tomcat/tomcat-8/v8.5.47/bin/apache-tomcat-8.5.47.tar.gz
