--- a/Projects/Studentapp/roles/appserver/tasks/main.yml
+++ b/Projects/Studentapp/roles/appserver/tasks/main.yml
@@ -24,5 +24,5 @@
 - name: Download JDBC Jar file
   get_url:
     src: "{{JDBC_JAR_URL}}"
-    dest: "{{TOMCAT_HOME}}/lib/mysql-connector.jar"
+    dest: "{{Tomcat_Home}}/lib/mysql-connector.jar"
   become_user: "{{App_User}}"
