--- a/Projects/Studentapp/roles/appserver/tasks/main.yml
+++ b/Projects/Studentapp/roles/appserver/tasks/main.yml
@@ -33,4 +33,10 @@
     dest: "{{Tomcat_Home}}/conf/context.xml" 
   become_user: "{{App_User}}"
 
+- name: Download Tomcat SystemD script
+  get_url:
+      url: "{{TOMCAT_SYSTEMD_SCRIPT}}"
+      dest: /etc/init.d/tomcat
+      mode: 755 
+
 
