--- a/Projects/Studentapp/Webapp.yml
+++ b/Projects/Studentapp/Webapp.yml
@@ -5,4 +5,14 @@
     - webserver
     - appserver
 
+- name: Load Schema 
+      mysql_db:
+        login_host: "{{DBHOST}}"
+        login_user: "{{DBUSER}}"
+        login_password: "{{DBPASS}}"
+        state: import
+        name: all
+        target: /tmp/schema.sql
+
+
     
