--- a/Sample-Yaml/HostConnection.yml
+++ b/Sample-Yaml/HostConnection.yml
@@ -1,6 +1,7 @@
 - name: Checking Host Connections
-  Hosts: 18.232.92.107
+  connection: 18.232.92.107
+  Hosts: all
   tasks:
-   - name: Host Connection Checking
+   - name: Connecting to Host
      debug:
       msg: "Connection Succesfull"
