--- a/Sample-Yaml/HostConnection.yml
+++ b/Sample-Yaml/HostConnection.yml
@@ -1,6 +1,6 @@
 - name: Checking Host Connections
   connection: "18.232.92.107"
-  Hosts: all
+  hosts: all
   tasks:
    - name: Connecting to Host
      debug:
