--- a/Sample-Yaml/HostConnection.yml
+++ b/Sample-Yaml/HostConnection.yml
@@ -1,5 +1,5 @@
 - name: Checking Host Connections
-  connection: "18.232.92.107"
+  connection: 18.232.92.107
   hosts: all
   tasks:
    - name: Connecting to Host
