--- a/Sample-Yaml/HostConnection.yml
+++ b/Sample-Yaml/HostConnection.yml
@@ -1,6 +1,4 @@
 - name: Checking Host Connections
-  host1:
-    http_port: 22
-    host: 18.232.92.107
+  hosts: 18.232.92.107
   tasks:
     - ping:
