--- a/Projects/Studentapp/deploy.yml
+++ b/Projects/Studentapp/deploy.yml
@@ -1,6 +1,5 @@
 - name: Make Deployment of given URL file 
   hosts: all
-  become: yes
-  gather_facts: no
+  gather_facts: yes
   roles:
     - deploy
